@@ -1,7 +1,7 @@
 Package: tm
 Title: Text Mining Package
-Version: 0.5-1.6
-Date: 2009-11-25
+Version: 0.5-1.7
+Date: 2009-12-11
 Author: Ingo Feinerer
 Maintainer: Ingo Feinerer <feinerer@logic.at>
 Depends: R (>= 2.7.0), methods
