@@ -42,7 +42,7 @@ TermDocumentMatrix.PCorpus <- TermDocumentMatrix.VCorpus <- function(x, control 
 c.TermDocumentMatrix <- function(x, ..., recursive = FALSE) {
     args <- list(...)
 
-    if (identical(length(args), 0))
+    if (identical(length(args), 0L))
         return(x)
 
     if (!all(unlist(lapply(args, inherits, "TermDocumentMatrix"))))
@@ -153,7 +153,7 @@ print.TermDocumentMatrix <- print.DocumentTermMatrix <- function(x, ...) {
     cat(sprintf("A %s-%s matrix (%d %ss, %d %ss)\n",
                 format[1], format[2], nrow(x), format[1], ncol(x), format[2]))
     cat(sprintf("\nNon-/sparse entries: %d/%d\n", length(x$v), prod(dim(x)) - length(x$v)))
-    sparsity <- if (identical(prod(dim(x)), 0)) 100 else round((1 - length(x$v)/prod(dim(x))) * 100)
+    sparsity <- if (identical(prod(dim(x)), 0L)) 100 else round((1 - length(x$v)/prod(dim(x))) * 100)
     cat(sprintf("Sparsity           : %s%%\n", sparsity))
     cat("Maximal term length:", max(nchar(Terms(x), type = "chars"), 0), "\n")
     cat(sprintf("Weighting          : %s (%s)\n", x$Weighting[1], x$Weighting[2]))
@@ -184,7 +184,7 @@ Terms <- function(x) if (inherits(x, "DocumentTermMatrix")) x$dimnames[[2]] else
 c.TermDocumentMatrix2 <- function(x, ..., recursive = FALSE) {
     args <- list(...)
 
-    if (identical(length(args), 0))
+    if (identical(length(args), 0L))
         return(x)
 
     if (!all(unlist(lapply(args, inherits, "TermDocumentMatrix"))))
